--- a/main.css
+++ b/main.css
@@ -52,7 +52,14 @@ body {
         align-items: center;
         padding-top: 115px;
         padding-bottom: 115px;
+        position: relative;
       }
+      .orb-canvas {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        right: 0;
+     }
       .about h1 {
         font-size: 70px;
         line-height: 76px; 
